service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress-space
spec:
  type: NodePort
  selector:
    name: nginx-ingress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
